# moss

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.html  package.json  vite.config.ts
.github/: opencv-config.json
.github/tools/: build_opencv_cross_platform.py  collect_dlls.py  opencv_ci.py
.github/workflows/: build-opencv.yml  build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.modelless.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  images.rs  lib.rs  window.rs
src/components/: Gallery.tsx  ImageDropZone.tsx  ModelSelectDialog.tsx  OutputDestination.tsx  OutputSettings.tsx  ProcessingControls.tsx  Sidebar.tsx  ThemeProvider.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  empty.tsx  input.tsx  progress.tsx  scroll-area.tsx  select.tsx  slider.tsx  switch.tsx
src/hooks/: useAppVersion.ts  useModelAvailability.ts  useProcessing.ts  useTauriStore.ts
src/lib/: fs.ts  i18n.ts  image.ts  models.ts
src/locales/en/: translation.json
src/locales/zh/: translation.json
src/pages/: Home.tsx  Settings.tsx
src/pages/settings/: AppearanceSection.tsx
src/state/: app-store.tsx
src/styles/: extends.css
src/styles/themes/: amber-minimal.css  claude.css  corporate.css  import-all.ts  marshmallow.css  modern-minimal.css  nature.css  slack.css  supabase.css  twitter.css  vercel.css
